Add give up option

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div id="feedback-container"></div>
         <input type="text" id="guess-input" maxlength="5" placeholder="Enter your guess">
         <button id="submit-guess">Submit</button>
+        <button id="give-up">Give Up</button>
         <p id="message"></p>
     </div>
     <script src="script.js"></script>
