--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <input type="text" id="guess-input" maxlength="5" placeholder="Enter your guess">
         <button id="submit-guess">Submit</button>
         <button id="give-up">Give Up</button>
+        <button id="play-again" style="display: none;">Play Again</button>
         <p id="message"></p>
     </div>
     <script src="script.js"></script>
